--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="ring"></div>
         <div class="ring"></div>
         <div class="ring"></div>
-        <p>loading...................</p>
+        <p>loading...</p>
     </div>
     
 </body>
