--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="ring"></div>
         <div class="ring"></div>
-        <div class="ring"></div>
+        <div class="ring"></div><br><br>
         <p>loading...</p>
     </div>
     
